--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,16 @@
-.App {
-  text-align: center;
-}
+
 
 .App-logo {
- max-width: 200px;
- margin: block;
- display: 0 auto;
+  max-width: 200px;
+  margin: block;
+  display: 0 auto;
 }
 
 .App-header {
- margin: 30px 0;
+  margin: 30px 0;
+}
+
+.App-footer {
+  text-align: center;
+  margin: 30px 0;
 }
