--- a/src/Synonyms.css
+++ b/src/Synonyms.css
@@ -1,9 +1,10 @@
 .Synonyms {
-    margin: 30px 0 0;
-    padding: 0;
+  margin: 15px 0 0;
+  padding: 0;
 }
 .Synonyms li {
-    display: inline;
-padding-right: 10px;
-line-height: 1;
+  font-size: 13px;
+  display: inline-block;
+  padding-right: 10px;
+  line-height: 1;
 }
